--- a/frontend_todo-app/package.json
+++ b/frontend_todo-app/package.json
@@ -17,7 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev:server": "npm run dev --prefix backend",
+    "dev:react": "npm run start",
+    "dev": "concurrently \"npm:dev:*\""
   },
   "eslintConfig": {
     "extends": [
